...
    "−"  : Operation.BinaryOperation(subtract),
    "×"  : Operation.BinaryOperation(multiply),
    "÷"  : Operation.BinaryOperation(divide),
    "π"  : Operation.Constant(Double.pi),
    "√"  : Operation.UnaryOperation(sqrt),
    "±"  : Operation.UnaryOperation(plusMinus),
    "AC" : Operation.Constant(0),
    "="  : Operation.Equals
  ]
  
  // Sets amass
  mutating func setOperand(operand: Double) {
    amass = operand
...
